--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "next": "15.1.0",
+    "@fontsource-variable/inter": "^5.2.6",
+    "@fontsource/anton": "^5.2.6",
     "@fontsource/ia-writer-mono": "5.0.11",
     "framer-motion": "11.3.23",
+    "next": "15.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-swipeable": "^7.0.2",
     "readcv": "0.1.5"
   }
 }
